[package]
name = "clientgen"
version = "0.1.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
description = "Generate API datastructures and methods for twitter API"
repository = "https://github.com/pwoolcoc/tweetust"
license = "MIT/Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
serde = "*"
serde_json = "*"
serde_macros = "*"
